[gd_scene load_steps=2 format=2]

[ext_resource path="res://BarScript.gd" type="Script" id=1]

[node name="BarScene" type="Node2D"]
script = ExtResource( 1 )

[node name="BoozeBottle" type="Button" parent="."]
margin_left = 196.0
margin_top = 88.0
margin_right = 273.0
margin_bottom = 134.0
rect_pivot_offset = Vector2( 125, 73 )
text = "Booze"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OtherStuff" type="Button" parent="."]
margin_left = 486.0
margin_top = 341.0
margin_right = 563.0
margin_bottom = 387.0
rect_pivot_offset = Vector2( -505, 92 )
text = "Other stuff"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JuiceBottle" type="Button" parent="."]
margin_left = 763.0
margin_top = 80.0
margin_right = 840.0
margin_bottom = 126.0
rect_pivot_offset = Vector2( 125, 73 )
text = "Juice"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 504.0
margin_top = 95.0
margin_right = 544.0
margin_bottom = 109.0
__meta__ = {
"_edit_use_anchors_": false
}
